Todo ready para presentar

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <footer class="footer">
       <div><img src="img/student.jpg" alt=""><span>Roberto Aguilar</span></div>
       <div><img src="img/student.jpg" alt=""><span>Brayan Navarro</span></div>
-      <div><img src="img/student.jpg" alt=""><span>Kennet</span></div>
+      <div><img src="img/student.jpg" alt=""><span>Kened Grajales</span></div>
       <div><img src="img/student.jpg" alt=""><span>Oldemar Perez</span></div>
       <section><p>Desarrollado por <a target="_blank" href="http://localmachine.es/">Localmachine</a></p></section>
     </footer>
