Template web ready

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
     </div>
     <!-- Section del footer -->
     <footer class="footer">
-      <div><img src="img/student.jpg" alt=""><span>Roberto Aguilar</span></div>
-      <div><img src="img/student.jpg" alt=""><span>Brayan Navarro</span></div>
-      <div><img src="img/student.jpg" alt=""><span>Kened Grajales</span></div>
-      <div><img src="img/student.jpg" alt=""><span>Oldemar Perez</span></div>
+      <!-- <div><img src="img/student.jpg" alt=""><span></span></div>
+      <div><img src="img/student.jpg" alt=""><span></span></div>
+      <div><img src="img/student.jpg" alt=""><span></span></div>
+      <div><img src="img/student.jpg" alt=""><span></span></div> -->
       <section><p>Desarrollado por <a target="_blank" href="http://localmachine.es/">Localmachine</a></p></section>
     </footer>
   </div>
