--- a/index.html
+++ b/index.html
@@ -244,5 +244,16 @@
     </footer>
   </div>
 <!-- Aqui acaba el div container -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154095665-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154095665-1');
+</script>
+
 </body>
 </html>
